--- a/parkingapp/templates/dash_corr.html
+++ b/parkingapp/templates/dash_corr.html
@@ -6,7 +6,7 @@
     <h1 class="h2">Пользователи с подозрительной активностью</h1>
   </div>
 
-  <dl class="row g-3 p-3wsejk text-start row-cols-md-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-6">
+  <dl class="row g-3 p-2 text-start row-cols-md-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-6">
     {% for user in corr_users %}
     <div class="rounded-2 border p-3 col">   
       <dt class="m-0">{{ user.username }}</dt>
