--- a/parkingapp/templates/dash_profile.html
+++ b/parkingapp/templates/dash_profile.html
@@ -8,7 +8,7 @@
   }
 </style>
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-  <div class="container p-5 text-center">
+  <div class="container p-2 py-5 text-center">
     <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
       role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
     </svg>
