коммит с притона дома

--- a/parkingapp/templates/profile.html
+++ b/parkingapp/templates/profile.html
@@ -23,7 +23,7 @@
   </div>
   <dl class="row g-3 text-start">
     <hr class="mt-4 mb-0">
-    <dd class="row mt-0 g-3" style="overflow: scroll; max-height: 60vh">
+    <dd class="row mt-0 g-3" style="overflow: scroll; height: ">
       {% for sex in bdsm %}
       <div class="mx-auto">
         <div class="p-4 border bg-white rounded-4 shadow">
