--- a/parkingapp/templates/sign.html
+++ b/parkingapp/templates/sign.html
@@ -33,8 +33,8 @@ active
           <small class="text-body-secondary">Введите 4 последние цифры номера банковской карты</small>
           <hr class="my-4">
           <div class="form-floating mb-3">
-            {{ form.password1 }}
-            <label for="{{ form.password1.id_for_label }}">Пароль</label>
+            {{ form.password }}
+            <label for="{{ form.password.id_for_label }}">Пароль</label>
           </div>
           <div class="form-floating mb-3">
             {{ form.password2 }}
