--- a/parkingapp/templates/parking_lot.html
+++ b/parkingapp/templates/parking_lot.html
@@ -1,9 +1,27 @@
-{% extends 'base.html' %}
-{% block content %}
+<!DOCTYPE html>
+{% load static %}
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
+  <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7"
+    type="text/javascript"></script>
+  <script src="https://unpkg.com/imask"></script>
+  <title>ЕСП</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'fav.ico' %}">
+</head>
+
 <div class="container text-center pt-5">
     <h1 class="display-6 text-body-emphasis">Введите код для въезда на парковку</h1>
     <h1 class="display-1 text-body-emphasis fw-bolder">{{parking.code}}</h1>
     <p>{{parking.address}}</p>
     <p class="text-danger">{{error}}</p>
 </div>
-{% endblock %}
