--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -247,6 +247,12 @@
                     Экспорт
                   </a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center gap-2" href="/pptx">
+                    <i class="bi bi-easel-fill"></i>
+                    К презентации
+                  </a>
+                </li>
               </ul>
           </div>
         </div>
