--- a/parkingapp/templates/parking_lot.html
+++ b/parkingapp/templates/parking_lot.html
@@ -18,7 +18,7 @@
   <title>ЕСП</title>
   <link rel="icon" type="image/x-icon" href="{% static 'fav.ico' %}">
 </head>
-
+<meta http-equiv="Refresh" content="5">
 <div class="container text-center pt-5">
     <h1 class="display-6 text-body-emphasis">Введите код для въезда на парковку</h1>
     <h1 class="display-1 text-body-emphasis fw-bolder">{{parking.code}}</h1>
