--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -245,7 +245,7 @@
       sec = '0' + String(sec)
     }
     if (String(min).length == 1) {
-      sec = '0' + String(min)
+      min = '0' + String(min)
     }
     time.innerHTML = String(min) + ':' +  String(sec)
   }, 1000)
