--- a/parkingapp/templates/coupon.html
+++ b/parkingapp/templates/coupon.html
@@ -7,28 +7,35 @@
   }
 </style>
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-  <form method="post">
-    {% csrf_token %}
-    <div class="col-md-7 col-lg-8 mt-3">
-      <div class="row">
-        <h4 class="mb-3 col-6">Выдача льготы</h4>
-        <small class="text-end text-danger col-6">{{ error }}</small>
-      </div>
-      <div class="row g-3">
-        <div class="col-sm-6">
+  <div class="col-md-7 col-lg-8 mt-3">
+    <div class="row">
+      <h4 class="mb-3 col-6">Выдача льготы</h4>
+      <small class="text-end text-danger col-6">{{ error }}</small>
+    </div>
+
+    <div class="row g-3">
+      <form class="col-sm-6" method="post">
+        {% csrf_token %}
+        <div>
           <label for="firstName" class="form-label">По номеру телефона</label>
           {{ form.phone }}
+          <button class="w-100 mt-4 btn btn-lg rounded-4 btn-primary" type="submit">Выдать льготу</button>
         </div>
+      </form>
 
-        <div class="col-sm-6">
+      <form class="col-sm-6" method="post">
+        {% csrf_token %}
+        <div>
           <label for="lastName" class="form-label">По автомобильному номеру</label>
           {{ form.car }}
+          <button class="w-100 mt-4 btn btn-lg rounded-4 btn-primary" type="submit">Выдать льготу</button>
         </div>
-      </div>
-
-      <button class="w-100 mt-4 btn btn-lg rounded-4 btn-primary" type="submit">Выдать льготу</button>
+      </form>
     </div>
-  </form>
+
+
+  </div>
+
 </main>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
