--- a/parkingapp/templates/signadmin.html
+++ b/parkingapp/templates/signadmin.html
@@ -17,7 +17,7 @@
 
         <div class="col-sm-6">
           <label for="firstName" class="form-label">Пароль</label>
-          {{ form.password1 }}
+          {{ form.password }}
         </div>
 
         <div class="col-sm-6">
