--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -22,9 +22,9 @@
   <div class="row g-3">
     <div class="col-sm-6">
       <div class="card">
+        <div class="card-header">Суммарный период пребывания</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{total_time}} минут</h5>
-          <p class="card-text">Суммарный период пребывания</p>
         </div>
       </div>
     </div>
