--- a/parkingapp/templates/dash_parks.html
+++ b/parkingapp/templates/dash_parks.html
@@ -84,7 +84,7 @@
               <input type="number" placeholder="Новая цена"
                 style="background: none; border: none; border-bottom: 1px solid #0d6efd; outline: none;"
                 inputmode="numeric" required="">
-              <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal"
+              <button type="button" class="btn btn-sm" style="background: none; border: none; border-bottom: 1px solid #0d6efd; outline: none;" data-bs-toggle="modal"
                 data-bs-target="#exampleModal" data-bs-whatever="{{ el.pk }}"><i
                   class="bi bi-arrow-return-left"></i></button>
             </div>
