--- a/parkingapp/templates/dash_fin.html
+++ b/parkingapp/templates/dash_fin.html
@@ -21,33 +21,33 @@
   <div class="row g-3">
     <div class="col-sm-6 col-xxl-3">
       <div class="card">
+        <div class="card-header">Транзакций на сумму</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{Fin.total_price}} ₽</h5>
-          <p class="card-text">Транзакций на сумму</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-xxl-3">
       <div class="card">
+        <div class="card-header">Количество транзакций</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{Fin.how_much_people_used}}</h5>
-          <p class="card-text">Количество транзакций</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-xxl-3">
       <div class="card">
+        <div class="card-header">Льготных транзакций на сумму</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{Fin.benefits_price}} ₽</h5>
-          <p class="card-text">Льготных транзакций на сумму</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-xxl-3">
       <div class="card">
+        <div class="card-header">Количество льготных транзакций</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{Fin.with_benefits}}</h5>
-          <p class="card-text">Количество льготных транзакций</p>
         </div>
       </div>
     </div>
