--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -30,9 +30,9 @@
     </div>
     <div class="col-sm-6">
       <div class="card">
+        <div class="card-header">Средний период пребывания</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{average_time}} минут</h5>
-          <p class="card-text">Средний период пребывания</p>
         </div>
       </div>
     </div>
@@ -85,17 +85,17 @@
   <div class="row g-3">
     <div class="col-sm-6">
       <div class="card">
+        <div class="card-header">Суммарный период пребывания</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{total_benefit_time}} минут</h5>
-          <p class="card-text">Суммарный период пребывания</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="card">
+        <div class="card-header">Средний период пребывания</div>
         <div class="card-body">
           <h5 class="card-title fw-bolder">{{average_benefits}} минут</h5>
-          <p class="card-text">Средний период пребывания</p>
         </div>
       </div>
     </div>
