--- a/parkingapp/templates/barrier.html
+++ b/parkingapp/templates/barrier.html
@@ -4,7 +4,7 @@
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Парковки</h1>
+    <h1 class="h2">Парковки Удалить страницу нахуй</h1>
     <div>
       <small class="text-danger text">{{ error }}</small>
       <a href="{% url 'parkingapp:addparking' %}" class="text-decoration-none mb-2"><i
