--- a/parkingapp/templates/dash_corr.html
+++ b/parkingapp/templates/dash_corr.html
@@ -9,13 +9,18 @@
 
   <dl class="row g-3 p-2 text-start row-cols-md-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-6">
     {% for user in corr_users %}
-    <div class="rounded-2 border p-3 col">   
-      <dt class="m-0">{{ user.username }}</dt>
+    <div class="col">
+      <div class="card">
+        <div class="card-header">{{ user.phone_number }}</div>
+        <div class="card-body">
+          <h5 class="card-title fw-bolder">{{ user.username }}</h5>
+        </div>
+      </div>
     </div>
     {% endfor %}
   </dl>
 
-{% for user in corr_users %}
+  {% for user in corr_users %}
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">{{ user.username }}</h1>
   </div>
@@ -46,7 +51,7 @@
       </tbody>
     </table>
   </div>
-{% endfor %}
+  {% endfor %}
 
 </main>
 {% endblock %}
