--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -10,7 +10,7 @@
       {% csrf_token %}
       <div class="mb-2 mb-md-0">
         <div class="input-group me-2">
-          {{form.pk}}
+          {{form.reg_num}}
           {{form.date1}}
           {{form.date2}}
           <button type="submit" class="btn btm-sm btn-primary radr"><i class="bi bi-arrow-return-left"></i></button>
